--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.1     2014/11/27
+
+ * Add Czech translation by Jaroslav Lichtblau
+ * Add German translation
+
 1.0.1   2014/11/23
 
  * Increase the "breathe" time
