--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <!--  -->
     <string name="about_menu_item">Über diese App</string>
     <!--  -->
-    <string name="about_message">Hey! Meditation von Oliver Zeit\nTschechische Übersetzung von Jaroslav Lichtblau\nDas Icon wurde mit dem Android Asset Studio erstellt</string>
+    <string name="about_message">Hey! Meditation von Oliver Zscheyge\nTschechische Übersetzung von Jaroslav Lichtblau\nDas Icon wurde mit dem Android Asset Studio erstellt</string>
     <!--  -->
     <string-array name="hey_messages">
         <item>Hey! Du bist perfekt!</item>
